# cpp-qt-chat-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client_gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui  socket_client.cpp  socket_client.h
protocol/: CMakeLists.txt  message.cpp  message.h
server/: CMakeLists.txt  chat_server.cpp  chat_server.h  client_handler.cpp  client_handler.h  main.cpp
